add brows html, and controll class

--- a/src/main/resources/templates/welcome-page.html
+++ b/src/main/resources/templates/welcome-page.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Witaj w naszym sklepie motoryzacyjnym MOTO CZĘŚCI</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="script.js" defer></script>
 
 </head>
 <body>
 <h1>Wybierz kategorię produktów</h1>
 <ul>
-  <li>Przeglądaj części samochodów osobowych</li>
-  <li>Przeglądaj części do samochodów ciężaraowych</li>
+  <li><a href="/brows-autopart">Przeglądaj części samochodów osobowych</a></li>
+  <li><a href="/brows-tirpart">Przeglądaj części do samochodów ciężaraowych</a></li>
   <li>Przeglądaj częci do motorów</li>
 </ul>
 
