add PartService, PartController

--- a/src/main/resources/templates/welcome-page.html
+++ b/src/main/resources/templates/welcome-page.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 <h1>Wybierz kategorię produktów</h1>
+<h3 th:text="${message}"></h3>
 <ul>
   <li><a href="/brows-autopart">Przeglądaj części samochodów osobowych</a></li>
   <li><a href="/brows-tirpart">Przeglądaj części do samochodów ciężaraowych</a></li>
-  <li>Przeglądaj częci do motorów</li>
+  <li><a href="/brows-motorpart">Przeglądaj częci do motorów</a></li>
+    <li><a href="/add-parts">Dodaj części</a></li>
 </ul>
 
 </body>
