add Register user

--- a/src/main/resources/templates/welcome-page.html
+++ b/src/main/resources/templates/welcome-page.html
@@ -11,10 +11,13 @@
 <h1>Wybierz kategorię produktów</h1>
 <h3 th:text="${message}"></h3>
 <ul>
-  <li><a href="/brows-autopart">Przeglądaj części samochodów osobowych</a></li>
-  <li><a href="/brows-tirpart">Przeglądaj części do samochodów ciężaraowych</a></li>
-  <li><a href="/brows-motorpart">Przeglądaj częci do motorów</a></li>
+    <li><a href="/register">Zarejestruj się w serwisie</a></li>
+    <li><a href="/brows-autopart">Przeglądaj części samochodów osobowych</a></li>
+    <li><a href="/brows-tirpart">Przeglądaj części do samochodów ciężaraowych</a></li>
+    <li><a href="/brows-motorpart">Przeglądaj częci do motorów</a></li>
     <li><a href="/add-parts">Dodaj części</a></li>
+    <br>
+    <li><a href="/console">Debug: Konsola bazy danych</a></li>
 </ul>
 
 </body>
