add part to DB with errors ;(

--- a/src/main/resources/templates/welcome-page.html
+++ b/src/main/resources/templates/welcome-page.html
@@ -17,6 +17,7 @@
     <li><a href="/brows-motorpart">Przeglądaj częci do motorów</a></li>
     <li><a href="/add-parts">Dodaj części</a></li>
     <br>
+    <li><a href="/find-user">Przeglądaj użytkowników</a></li>
     <li><a href="/console">Debug: Konsola bazy danych</a></li>
 </ul>
 
