fixed adding parts to db

--- a/src/main/resources/templates/add-parts.html
+++ b/src/main/resources/templates/add-parts.html
@@ -15,11 +15,11 @@
   <br>
   <label>Rodzaj pojazdu:</label>
   <label>Samochód osobowy</label>
-  <input type="radio" name="vehicle_type" value="auto">
+  <input type="radio" name="part_type" value="AUTO">
   <label>Samochód ciężarowy</label>
-  <input type="radio" name="vehicle_type" value="tir">
+  <input type="radio" name="part_type" value="TIR">
   <label>Motor</label>
-  <input type="radio" name="vehicle_type" value="motor">
+  <input type="radio" name="part_type" value="MOTOR">
   <button type="submit">Dodaj przedmiot</button>
 </form>
 </body>
