fixed filtering parts on 'przeglądaj dostępne części' page.

--- a/src/main/resources/templates/welcome-page.html
+++ b/src/main/resources/templates/welcome-page.html
@@ -16,6 +16,7 @@
     <li><a href="/brows-tirpart">Przeglądaj części do samochodów ciężaraowych</a></li>
     <li><a href="/brows-motorpart">Przeglądaj częci do motorów</a></li>
     <li><a href="/add-parts">Dodaj części</a></li>
+    <li><a href="/find-part">Przeglądaj dostępne części</a></li>
     <br>
     <li><a href="/find-user">Przeglądaj użytkowników</a></li>
     <li><a href="/console">Debug: Konsola bazy danych</a></li>
